Done static gallery

--- a/src/app/client/cs-products/cs-products.component.html
+++ b/src/app/client/cs-products/cs-products.component.html
@@ -35,6 +35,9 @@
                       </mat-card-content>
                     </mat-card>
                   </div>
+                  <!-- <div class='item item-2' fxFlex='100%' fxLayoutAlign='center center'>
+                    <mat-paginator [pageSize]='10' [length]='bikes.length'></mat-paginator>
+                  </div> -->
                 </div>
               </mat-card-content>
             </mat-card>
