--- a/src/app/client/cs-nav/cs-nav.component.html
+++ b/src/app/client/cs-nav/cs-nav.component.html
@@ -5,6 +5,7 @@
     <a mat-button routerLink='/'>&nbsp;Home&nbsp;</a>
     <a mat-button routerLink='/products'>&nbsp;Products&nbsp;</a>
     <a mat-button routerLink='/services'>&nbsp;Services&nbsp;</a>
+    <a mat-button routerLink='/gallery'>&nbsp;Gallery&nbsp;</a>
   </div>
   <button mat-icon-button [matMenuTriggerFor]='menu' fxHide='false' fxHide.gt-sm>
     <mat-icon>menu</mat-icon>
@@ -14,6 +15,7 @@
   <a mat-menu-item routerLink='/'>&nbsp;Home&nbsp;</a>
   <a mat-menu-item routerLink='/products'>&nbsp;Products&nbsp;</a>
   <a mat-menu-item routerLink='/services'>&nbsp;Services&nbsp;</a>
+  <a mat-menu-item routerLink='/gallery'>&nbsp;Gallery&nbsp;</a>
 </mat-menu>
 
 <div class='routeView'>
