--- a/src/app/client/cs-gallery/view-glimage/view-glimage.component.html
+++ b/src/app/client/cs-gallery/view-glimage/view-glimage.component.html
@@ -1,1 +1,1 @@
-<img [src]='imgSrc' width='100%' height='100%'>
+<img [src]='"data:image/png;jpg;jpeg;base64," + imgSrc | imageData' width='100%' height='100%'>
