Change some terms

--- a/src/app/server/ss-daily-sales/ss-daily-sales.component.html
+++ b/src/app/server/ss-daily-sales/ss-daily-sales.component.html
@@ -1,11 +1,11 @@
 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' style='margin-top: 30px'>
   <div class='item item-1' fxFlex='5%'></div>
   <div class='item item-2' fxFlex='42%'>
-    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='add'>Add sale</button>
+    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='add'>Add sold items</button>
   </div>
   <div class='item item-3' fxFlex='1%'></div>
   <div class='item item-4' fxFlex='42%'>
-    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='receive'>Receive items</button>
+    <button mat-raised-button color='primary' style='width: 100%; height: 100%' routerLink='receive'>Add received items</button>
   </div>
   <div class='item item-5' fxFlex='5%'></div>
 </div>
