--- a/src/app/server/ss-add-sales/ss-add-sales.component.html
+++ b/src/app/server/ss-add-sales/ss-add-sales.component.html
@@ -3,7 +3,7 @@
   <div class='item item-2' fxFlex='90%'>
     <mat-card class='mat-elevation-z8'>
       <mat-card-header>
-        <mat-card-title>Add Sales</mat-card-title>
+        <mat-card-title>Add Sold Items</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
