--- a/src/app/server/ss-sales-report/ss-sales-report.component.html
+++ b/src/app/server/ss-sales-report/ss-sales-report.component.html
@@ -3,12 +3,12 @@
   <div class='item item-1' fxFlex='90%'>
     <mat-card class='mat-elevation-z8'>
       <mat-card-header>
-        <mat-card-title>Sales Report</mat-card-title>
+        <mat-card-title>Consolidation Report</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
           <mat-form-field class='item item-1' fxFlex='30%'>
-            <mat-label>Type of sale</mat-label>
+            <mat-label>Consolidate</mat-label>
             <mat-select [(ngModel)]='inf.type' name='type'>
               <mat-option *ngFor='let typ of salesOpts' [value]='typ.value'>{{ typ.viewVal }}</mat-option>
             </mat-select>
