--- a/src/app/server/admin-nav/admin-nav.component.html
+++ b/src/app/server/admin-nav/admin-nav.component.html
@@ -9,6 +9,7 @@
         <span class='subt'>{{ getUserAccessLvl() }}</span>
       </mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink='notifications' (click)='openNotif()'><mat-icon>notification_important</mat-icon>&nbsp;&nbsp;Notifications&nbsp;&nbsp;<span matBadge='!' matBadgeOverlap='false' matBadgeColor='warn' [matBadgeHidden]="isOpen"></span></a>
       <div *ngFor='let ls of navLs'>
         <a mat-list-item routerLink='{{ ls.path }}' *ngIf='checkAcctType(ls.role)'><mat-icon>{{ ls.ic }}</mat-icon>&nbsp;&nbsp;{{ ls.name }}</a>
       </div>
